button-buy and overflow:hidden are fixed for Safari

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -70,6 +70,8 @@ button:active {
 
 .overflow-hidden {
   overflow: hidden;
+  touch-action: none;
+  -ms-touch-action: none;
 }
 
 /* // Cтили, заданные по умолчанию */
@@ -108,6 +110,6 @@ button:active {
   display: block;
 }
 
-.z-index{
+.z-index {
   z-index: 5;
 }
