--- a/src/scss/blocks/_button.scss
+++ b/src/scss/blocks/_button.scss
@@ -12,6 +12,7 @@
   letter-spacing: 0.25px;
   transition: background-color 0.2s ease-in;
   cursor: pointer;
+  -webkit-appearance: none;
 
   &:hover {
     background-color: #000;
@@ -35,6 +36,10 @@
   transition: fill 0.2s ease-in;
   z-index: 2;
   fill: none;
+
+  &:hover .button__pic {
+    fill: #77b900;
+  }
 }
 
 .button--mobile--active {
